# duckdb-gemmi

./: CMakeLists.txt  Makefile  extension_config.cmake
.github/workflows/: MainDistributionPipeline.yml
src/: duckdb_gemmi_extension.cpp
src/include/: duckdb_gemmi_extension.hpp
test/sql/: duckdb_gemmi.test
